[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Brian McCallister <brianm@skife.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
regex = "^2023.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
